# bufferfuzzer

./: CMakeLists.txt  README.md  build.sh  version.md
bufferfuzzer/: bufferfuzzer.h
bufferfuzzer/model/: MParseBin.c  MParseBinChild.c  MParseBinElement.c  MParseXmlAttribute.c  MParseXmlConfigure.c  MParseXmlDefaults.c  MParseXmlLength.c  MParseXmlLine.c  MParseXmlModel.c  MParseXmlOther.c  MParseXmlRef.c  MParseXmlTree.c  MParseXmlType.c  MParseXmlValue.c  MPlatForm.c  MdoAfter.c  MdoAnalyzer.c  MdoBits.c  MdoBuffer.c  MdoCheck.c  MdoFixup.c  MdoPadding.c  MdoRelation.c  MdoTransform.c  Mdofuzz.c  Mdump.c  Mlib.c  Model.h  Mpublic.c  MtreeLib.c
doc/: bug复现.md  例子1.md  例子2.md  如何编译被测代码.md  工具如何编译.md  报告生成.md  普通测试.md  模型测试.md  解析bin测试.md  调试.md
doc/工具原理/: 变异算法.md  基本原理.md  模型元素类型.md
doc/建模/: Analyzer建模.md  Configure.md  Defaults.md  Fixup建模.md  Relation(Count)建模.md  Relation(Size)建模.md  mutator.md  ref建模.md
doc/扩展/: 自定义Analyzer.md  自定义Fixup.md  自定义Relation.md  自定义Transform.md  自定义check(constraint).md
doc/用例编写/: 单独模型用例.md  单程序多用例.md  多模型用例.md  模型+bin文件用例.md  模型+setget直接调用.md
doc/适配/: arp.md  dhcp.md  http.md  httpRest.md  ipv4.md  jpg.md  json通用建模.md  mp4.md  xml通用建模.md  适配gtest.md
test/test1/: test.xml
test/test10/: test.xml
test/test100/: test.c  test.xml
test/test101/: test.c  test.xml
test/test102/: test.xml
test/test11/: test.xml
test/test12/: test.xml
test/test13/: test.xml
test/test14/: test.c  test.xml
test/test15/: test.xml
test/test16/: test.xml
test/test17/: test.c  test.xml
test/test18/: test.xml
test/test19/: test.xml
(+84 files in other folders)
